k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-server
  namespace: chat-server
spec:
  rules:
    - http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: chat-server
                port:
                  number: 8080
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: chat-server
                port:
                  number: 8080
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: chat-server
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-web
                port:
                  number: 80
